--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
     <div id="root"></div>
 
     <script src="//code.jquery.com/jquery.js"></script>
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>>
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
     <!--
       This HTML file is a template.
